# totally-ordered-rs

./: .travis.yml  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
benches/: benchmark.rs
src/: lib.rs
